Fix dragging the window after clicking the game view

https://bugzilla.gnome.org/show_bug.cgi?id=754837